# SANDBOX-IDOBATA

./: .gitignore  .mcp.json  CLAUDE.md  README.md  requirements.txt  simulate.sh  test_basic.py  test_simulation.py
.claude/: settings.local.json
.claude/commands/: idobata-init.md
.devcontainer/: Dockerfile  claude-stats.cron  devcontainer.json  post-create.sh  supervisord.conf
.devcontainer/serena-mcp/: README.md  pyproject.toml  requirements.txt
.devcontainer/serena-mcp/src/serena_mcp/: __init__.py  __main__.py  cache_manager.py  config.py  context_manager.py  lsp_client.py  lsp_mock.py  mcp_server.py  mcp_stdio_server.py
.devcontainer/serena-mcp/src/serena_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
